--- a/css/style.css
+++ b/css/style.css
@@ -29,6 +29,10 @@ article a {
   padding: 10px 25px;
   text-decoration: none;
   font-weight: bold;
+  transition: all 0.2s ease;
+}
+article a:hover {
+  background: #c71111;
 }
 article p {
   margin-bottom: 30px;
